test03/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test03
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test03
  template:
    metadata:
      labels:
        app: test03
    spec:
      containers:
        - name: main
          image: dhltraining.azurecr.io/ondrejsika/training-example-dhl
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 20m
              memory: 20Mi
