test03/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test03
spec:
  selector:
    app: test03
  ports:
    - port: 80
      targetPort: 8000
