test03/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test03
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test03.dhltest.sld1.uk
      secretName: test03.dhltest.sld1.uk-tls
  rules:
    - host: test03.dhltest.sld1.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test03
                port:
                  number: 80
